--- a/doc/MEQ/CppDataStructures.tex
+++ b/doc/MEQ/CppDataStructures.tex
@@ -76,10 +76,10 @@ meetings. The document is available via CVS at
 
   \item In C++, standard data structures \& nodes reside in \qq{namespace Meq}.
     In Glish, corresponding object constructors are placed into the {\tt meq}
-    ``namespace'' (actually just a record), and names are all-lowercase. The DMI dynamic type system
-    uses a {\tt Meq} prefix. Thus, the \qq{Meq::\Request} class in C++ is
-    registered as a ``\qq{MeqRequest}'' in the DMI type system, and  has a 
-    \qq{meq.request()} counterpart in Glish.
+    ``namespace'' (actually just a record), and names are all-lowercase. The
+    DMI dynamic type system uses a {\tt Meq} prefix. Thus, the
+    \qq{Meq::\Request} class in C++ is registered as a ``\qq{MeqRequest}'' in
+    the DMI type system, and  has a  \qq{meq.request()} counterpart in Glish.
 
   \item The C++ side uses DMI HIIDs (hierarchical IDs) extensively. When seen
     as a string, HIIDs take the form ``\qq{Request.ID}''. When used as record
@@ -98,23 +98,24 @@ meetings. The document is available via CVS at
 \subsection{Glish \qq{meq} objects: meqtypes.g}
 
   With a couple of exceptions, Meq objects are represented by Glish records of
-  a specific layout. The Glish/C++ conversion layer uses a few ``magic''
-  attributes to distinguish these records, and map them to specialized Meq
-  classes rather than generic \qq{DataRecord}s. Specifically, the
-  \qq{::dmi\_actual\_type} attribute is set to a string which gives the DMI
-  object type. 
+  a [mostly] predefined layout. The Glish/C++ conversion layer uses a few
+  ``magic'' attributes to distinguish these objects from ordinary records, so
+  it is able to map them to specialized Meq C++ classes rather than generic
+  \qq{DataRecord}s. 
 
-  Thus, it is possible to construct a record in Glish, tag it with
-  \qq{::dmi\_actual\_type}, pass it to C++, and have it auto-magically
-  converted to an C++ object of the appropriate class. The only requirement is
-  that the record contain the appropriate fields, which are mapped to class
-  attributes (data members) in C++. The file \qq{meq/meqtypes.g} defines  some
-  Glish ``constructor'' functions which create properly formed records:
+  Specifically, the \qq{::dmi\_actual\_type} attribute is set to a string which
+  gives the DMI object type. Thus, it is possible to construct a record in
+  Glish, tag it with \qq{::dmi\_actual\_type}, pass it thorugh the Glish/C++
+  layer, and have it auto-magically converted to an C++ object of the
+  appropriate class. The only requirement is that the record contain the
+  correct set of fields, which are mapped to class attributes (data members) in
+  C++. The file \qq{meq/meqtypes.g} defines  some Glish ``constructor''
+  functions which create properly formed records:
 
   \begin{description}
   
-  \item[\qq{meq.domain()}] creates a Domain object. This is actually a vector
-    of four doubles: $f_1,f_2,t_1,t_2$. 
+  \item[\qq{meq.domain()}] creates a Domain object (actually a vector
+    of four doubles: $f_1,f_2,t_1,t_2$.)
 
   \item[\qq{meq.cells()}] creates a Cells object (record).
 
@@ -127,19 +128,20 @@ meetings. The document is available via CVS at
   
   \end{description}
   
-  Some Meq classes have Glish counterparts but no constructor functions (at
-  least yet), since these objects tend to be constructed on the C++ side only.
-  These currently include \Vells, \VellSet{}s, and \Result{}s.
-  
-  Thus, there is a duality between data objects on the C++ side, and
-  properly-formed records on the Glish side. Within this document, we will
-  usually talk in terms of Glish records and record fields. 
+  Some Meq classes have Glish counterparts but no constructor functions, since
+  these objects are passed from C++ to Glish but not vice versa (it is always
+  possible to implement such constructors in the future, if necessary). These
+  include \Vells, \VellSet{}s, and \Result{}s.
+
+  In general, all data objects on the C++ side have counterparts on the Glish
+  side. Within this document, we will describe data objects in terms of Glish
+  records and record fields, with the understanding that there is a trivial
+  mapping from that to C++ classes and data members.
 
   Several other functions in \qq{meqtypes.g} help to construct defrecs for
   nodes (see below). \qq{meq.node()} puts together a basic node defrec -- class
-  name, node name, optional children specification, optional configuration group
+  name, node name, optional children specification, optional node group
   list. \qq{meq.parm()} is a specialization for constructing \Parm\ defrecs.
-
     
 \section{MeqNode}
 
@@ -371,8 +373,8 @@ virtual void setStateImpl (DataRecord &rec,bool initializing);
 
   \item Gets node name (\qq{.name}) from the state record.
 
-  \item Gets the configuration group(s) from the state record 
-    (\qq{.config\_groups}, see below).
+  \item Gets the node group list from the state record  (\qq{.node\_groups},
+    see below).
 
   \item Sets up caching policy according to what is specified in the init
     record (\qq{.cache\_policy}, details TBD).
@@ -432,7 +434,7 @@ virtual void setStateImpl (DataRecord &rec,bool initializing);
   \item[optional flags] \& other attributes (if needed for \Cells\ or change of
     state. E.g. the calc\_deriv flag).
 
-  \item[optional rider] record.
+  \item[optional rider] record, containing {\em commands} and state changes.
   
   \end{description}
       
@@ -445,15 +447,13 @@ virtual void setStateImpl (DataRecord &rec,bool initializing);
   \noindent\begin{tabular}{lp{.8\textwidth}}
   \qq{.request\_id} & the request ID (a HIID)\\
   \qq{.cells}       & [opt] a \Cells\ object (see below)\\
-  \qq{.node\_state} & [opt] new node states (see below)\\
   \qq{.calc\_deriv} & [opt] boolean: compute derivatives over cells? 
                       Default is false.\\
   \qq{.next\_request} & [opt] a hint of what the next request is going to be.
                       This matters for caching decisions, and for ``rippling''
                       trees.\\
   \qq{.rider}       & [opt] rider record, used for additional commands, 
-                      etc. E.g. \qq{rider.save\_params=T} can be used to save 
-                      all parameters.
+                      etc. (see below)
   \end{tabular}
   
 \subsection{Request IDs}
@@ -616,11 +616,9 @@ virtual void setStateImpl (DataRecord &rec,bool initializing);
     literal equality. See caching issues, below, for a discussion of ID
     matching.)
 
-  \item For new requests only: if a \qq{node\_state} record is present in the request, interprets that
-    (see below) and calls the virtual \qq{setState()} method as required. 
-
-  \item For new requests only: if a rider record is present, calls the virtual
-    \qq{processRider()} method (default implementation does nothing).
+  \item For new requests only: if a rider record is present, parses it and 
+    calls the \qq{processCommands()} method if a command set for the node
+    is found.
 
   \item If node has children, calls the virtual \qq{pollChildren()} method to
     collect results from its children. The default implementation of this
@@ -633,9 +631,9 @@ virtual void setStateImpl (DataRecord &rec,bool initializing);
     If the cumulative result code contains \RES{WAIT} or \RES{FAIL},
     \qq{execute()} returns immediately with that result code. 
     
-    Note that the default implementation is appropriate for most node classes,
-    with the exception of specialized ``control'' nodes such as \qq{Sink} and
-    \qq{Solver}.
+    Note that the default implementation of \qq{pollChildren()} is appropriate
+    for most node classes, with the exception of specialized ``control'' nodes
+    such as \qq{Sink} and \qq{Solver}.
 
   \item If a \Cells\ object is present, calls the virtual \qq{getResult()}
     method, passing in the vector of child \Result{}s returned by
@@ -784,69 +782,123 @@ virtual void setStateImpl (DataRecord &rec,bool initializing);
   cached result or recalculate the request (see step [1] of \qq{execute()}),
   the request IDs are matched according to the dependency mask.
   
-\subsection{Using node\_state}
+\subsection{Commands in request riders}
 
-  The optional \qq{node\_state} sub-record of a \Request\ may be used to
-  reconfigure specific nodes. This is used by the Solver to set solvable
-  parameters, update their polcs, etc. 
+  The optional \qq{rider} sub-record of a \Request\ may be used to send
+  additional commands to specific nodes. The Solver node, for example, makes
+  heavy use of this feature to implement iterative solutions. Command sets are
+  specified via records, with the field names being the commands per se, and
+  the field values being the command arguments. If the record contains multiple
+  commands, they are processed in a specific order. Some example commands are:
 
-  In a very large tree, it's not practical for every single node to check the
-  record for possible changes. For this reason, we introduce the concept of
-  {\em configuration groups}. 
-
-  A node's config groups are specified via a list of HIIDs passed in the
-  \qq{.config\_groups} field of the init record (they can subsequently be
-  changed via \qq{setState()}). All Nodes automatically belong to the \qq{all}
-  group. Config groups are used as a first-level index into the
-  \qq{node\_state} record. If a node belongs to config groups \qq{foo} and
-  \qq{bar}, \qq{Node::execute()} will look for the {\em group config records}\/
-  \qq{node\_state.all}, \qq{node\_state.foo} and \qq{node\_state.bar}. If a
-  config record is found, the node will attempt to locate an appropriate state
-  specification for itself.
-
-  The config record may contain two types of state maps. The first type of
-  state map, called \qq{.by\_nodeindex}, is a direct map of node index to
-  individual state updates. For example: 
-
-\begin{verbatim}
-  - node_state.foo.by_nodeindex
-  [ #17 = [ value=1 ], #32 = [ value=2 ] ]
-\end{verbatim}
-
-  ...updates \qq{state.value} for nodes 17 and 32 (the nodes must belong to
-  group \qq{foo}, otherwise the state specification is ignored). If a node's
-  index is found in the map, \qq{setState()} is called with the contents of the
-  subrecord. Note that since Glish only supports strings for record field
-  names, the \qq{'\#ddd'} form is used to specify a numeric node index.
-
-  The second type of state map, called \qq{.by\_list}, can be used to specify
-  state for groups of nodes, by name or index:
-
-\begin{verbatim}
-  - node_state.foo.by_list
-  [ *1 = [ name="RA DEC",nodeindex=[17,32],state=[ solvable=T ] ],
-    *2 = [ state=[ solvable=F ] ]
-\end{verbatim}
-
-  This makes nodes RA, DEC, 17 and 32 solvable, and the rest non-solvable.  A
-  map like this is essentially a list of records. Each entry in the list should
-  have a \qq{name} field (string or array of strings) and/or a \qq{nodeindex}
-  field (integer or array of integers), plus a \qq{state} sub-record.
-  \qq{Node::execute()} will iterate through the entries one by one; if the
-  node's name is found in \qq{name}\footnote{In the future, pattern matching
-  will be supported as well.}, or the node index is found in \qq{nodeindex},
-  then \qq{setState()} is called with the contents of \qq{state}. Once a match
-  is found, list processing stops. As a special case, if neither \qq{name} nor
-  \qq{index} is specified, then the entry is a ``wildcard'' matching any node.
-  Wilcards are only useful at the end of the list, to catch nodes not already
-  matched by previous entries.
+  \begin{description}
   
+  \item[\qq{state}:] to change the state of a node (available for all nodes);
+  
+  \item[\qq{set\_value}:] to change the values of a polc in a MeqParm (see
+  below);
+  
+  \item[\qq{save\_polc}:] to save the polc(s) in a MeqParm (see below).
+  
+  \end{description}
+  
+  The rider record is structured so that it is possible to associate a command
+  with a specific node or a set of nodes. A node will check if the request
+  contains any commands for itself. Note that in a very large tree, these
+  repeated checks may become expensive. It is for this reason that we introduce
+  the concept of {\em node groups}. 
+  
+  A node may be associated with one or more groups. Groups are specified via a
+  list of HIIDs passed in the \qq{.node\_groups} field of the init record (they
+  can subsequently be changed via \qq{setState()}). All nodes automatically
+  belong to the \qq{all} group. A node's groups are used as a first-level index
+  into the \qq{rider} record. If a node belongs to groups \qq{foo} and
+  \qq{bar}, then \qq{Node::execute()} will check for the {\em command
+  subrecords}\/ (CSRs) \qq{rider.foo}, \qq{rider.bar}, and \qq{rider.all}, in
+  that order, and process any subrecords that it finds.
+
+  Each CSRs contains a number of command sets. These command sets may be
+  associated with specific nodes. There are three ways to specify these
+  associations:
+  
+  \paragraph{All nodes in group:} The command sets specified via the field
+  \qq{command\_all} is applied to all nodes in the group. For example:
+
+\begin{verbatim}
+  - req.rider.foo.command_all
+  [ save_polc=T,state=[solvable=F] ]  
+\end{verbatim}
+
+  ...will call \qq{processCommands()} on all nodes in group \qq{foo} (saving
+  polcs and setting their state to non-solvable.)
+
+  \paragraph{Via node index:} Command sets may be associated with a specific
+  node index. This is done via field \qq{command\_by\_nodeindex}, which is
+  essentially a map from node index to command set. For example:
+
+\begin{verbatim}
+  - req.rider.foo.command_by_nodeindex
+  [ #19 = [ value=1,save_polc=T ], #41 = [ value=2,save_polc=T ] ]
+\end{verbatim}
+
+  ...will cause a \qq{processCommands()} call on nodes 19 and 41. (Note that
+  since Glish only supports strings for record field names, the \qq{'\#ddd'}
+  form is used to specify a ``numeric'' node index.)
+
+  \paragraph{Via lists:} The third way is to associate command sets with nodes
+  listed by name or node index. This is specified via field
+  \qq{command\_by\_list}. For example:
+
+\begin{verbatim}
+  - req.rider.foo.by_list
+  [ *1 = [ name="RA DEC",nodeindex=[17,32],state=[solvable=T],command=[save_polc=T] ],
+    *2 = [ state=[solvable=F] ]
+\end{verbatim}
+
+  ...will call \qq{processCommands()} with the first command set on nodes RA,
+  DEC, \#17 and \#32, and with the second command set on all other nodes in
+  group \qq{foo}. To be more specific, the \qq{command\_by\_list} field is
+  treated as a list  of records. Each record in the list is a command set, with
+  an additional \qq{name} field (string or vector of strings) and/or a
+  \qq{nodeindex} field (integer or vector of integers). \qq{Node::execute()}
+  will iterate through the records one by one; if the node's name is found in
+  \qq{name}\footnote{In the future, pattern matching will be supported as
+  well.}, or the node index is found in \qq{nodeindex}, then
+  \qq{processCommands()} is called with the contents of that record. Once a
+  match is found, list processing stops. As a special case, if neither
+  \qq{name} nor \qq{index} is specified, then the entry is a ``wildcard''
+  matching any node. Wilcards are only useful at the end of the list, to catch
+  nodes not already matched by previous entries.
+  
+\subsubsection{Command evaluation order}
+
+  In cases where a node finds more than one command set associated with it, the
+  order of processing becomes important. The rider is parsed in the following
+  order:
+
+  \begin{itemize}
+  
+  \item The outer loop is over node groups, in the order in which they are
+  specified in the node state record. The \qq{all} group is checked last.
+  
+  \item Within a group's command sub-record, the processing order is from least
+  specific to most specific: \qq{command\_all}, \qq{command\_by\_list},
+  \qq{command\_by\_nodeindex}.
+  
+  \item Once a command set is passed to a node's \qq{processCommands()} method,
+  the order of processing is determined by the node class implementation.
+  Generally, a subclass should call its parent's \qq{processCommands()} first,
+  so general commands (such as \qq{state}) should be processed before
+  more class-specific commands (such as \qq{save\_polc}).
+  
+  \end{itemize}
+
 \section{Description of specialized nodes}
 
 \subsection{MeqParm}
 
   The \Parm\ node implements a possibly solvable Measurement Equation
-  parameter. The basis of a \Parm\ is the \Polc\ class.
+  parameter. The parameter is represented by one or more \Polc\ objects.
 
 \subsubsection{MeqPolc}
 
@@ -864,20 +916,20 @@ virtual void setStateImpl (DataRecord &rec,bool initializing);
   \qq{.weight}  & weight\\
   \qq{.pert}  & perturbation to use for computing derivatives\\
   \qq{.dbid\_index}  & database ID (see below)\\
-  \qq{inf_domain} &  optional flag: infinite domain (see below)\\
-  \qq{grow_domain} &  optional flag: growing domain (see below)\\
+  \qq{.inf\_domain} &  optional flag: infinite domain (see below)\\
+  \qq{.grow\_domain} &  optional flag: growing domain (see below)\\
   \end{tabular}
   
   The value of a polc for frequency $f$ and time $t$ is computed as follows:
 
   \begin{equation}
-  p(f,t) = \sum_{i=0}^N\sum_{j=0}^M c_{ij}(\frac{f-f_0}{s_f})^i(\frac{t-t_0}{s_t})^j
+  p(f,t) = \sum_{i=0}^{N-1}\sum_{j=0}^{M-1} c_{ij}(\frac{f-f_0}{s_f})^i(\frac{t-t_0}{s_t})^j
   \end{equation}
   
-  Here, $c_{ij}$ is the 2D array of coefficients, and $f_0,s_f,t_0,s_t$ is the
-  scale of the polc. The scale is only necessary to keep numbers small so as to
-  avoid round-off errors.
-  
+  Here, $c_{ij}$ is an $N\times M$ array of coefficients (\qq{coeff}), and
+  $f_0,s_f,t_0,s_t$ is the scale of the polc. The scale is only necessary to
+  keep numbers small so as to avoid round-off errors.
+
 \subsubsection{MeqParm state}
 
   Here's the layout for a \Parm\ state record. All of these attributes are
@@ -900,7 +952,7 @@ virtual void setStateImpl (DataRecord &rec,bool initializing);
   \item[\qq{default}] (\Polc, optional) a default \Polc, to be used as a last
     resort (i.e. if no polcs found in the MEP table).
 
-  \item[\qq{auto_save}] (bool, optional) If true, any updates to the parm's 
+  \item[\qq{auto\_save}] (bool, optional) If true, any updates to the parm's 
     polcs are immediately saved to the MEP table. If false, updates need to be
     explicitly saved (more on this below). Default is false.
 
@@ -909,39 +961,41 @@ virtual void setStateImpl (DataRecord &rec,bool initializing);
 \subsubsection{Selecting polcs}
 
   The \qq{Parm::getResult()} method is responsible for evaluating a parm over a
-  \Cells\ (specifically, over the domain of the \Cells). To evaluate itself,
-  the parm needs one or more \Polc{}s. Most of the tricky logic of the \Parm\
-  class is dedicated to choosing the right set of polcs for a given domain. 
-  Currently, a \Parm\ will select polc(s) as follows:
+  \Cells\ (specifically, over the domain of the \Cells). To do this, the parm
+  needs to find an appropriate polc or polcs for the given domain. Most of the
+  tricky logic of the \Parm\ class is dedicated to choosing the right set of
+  polcs.  Currently, it will select polc(s) as follows:
 
   \begin{enumerate}
   
   \item If no MEP table and no default polc has been set in the state record,
     then the parm will blindly re-use the current polc list (i.e. the
-    \qq{polcs} field of the state record), or fail if the list is empty. 
+    \qq{polcs} field of the state record), or fail if the list is empty.  No
+    further error checking is done, and it is up to the user to ensure that the
+    parm has been initialized with polcs that are meaningful w.r.t. the domain
+    of the request.
 
-  \item Otherwise, the parm will first check if the current polc list contains
-    a single polc. (If there is more than one polc, it immediately proceeds to
-    the next step.) The polc is then checked for re-usability:
-    
+  \item Otherwise, the parm will first see if it can re-use the current polc 
+    anyway. The current list must contain a single polc, which is tested for
+    re-usability as follows:
+
     \begin{enumerate}
     
-    \item If the \qq{inf_domain} flag is set, the polc has an infinite domain, 
-      and will be re-used directly.
+    \item If the \qq{inf\_domain} flag is set, the polc has an infinite domain, 
+      and can be re-used.
       
-    \item If the \qq{grow_domain} flag is set, the polc allows for ``growing
-      domains''. If the requested domain is a superset of the polc's current
-      domain, then this domain is assigned to the polc, and the polc is
-      re-used. 
+    \item If the \qq{grow\_domain} flag is set, and the requested domain is a
+      superset of the polc's current domain, then the domain of the polc is
+      expanded to match the requested domain, and the polc can be re-used. 
 
     \item If the requested domain is a subset of the polc's current domain, the
       polc is re-used.
 
     \end{enumerate}
 
-  \item If no polcs are available for re-use, the current polc list is cleared.
-    The parm will then query its MEP table for polcs whose domain overlaps
-    the requested domain. These polcs are loaded into the polc list.
+  \item If no re-use is possible, the current polc list is cleared. The parm
+    will then query its MEP table for polcs whose domain overlaps the requested
+    domain. These polcs are loaded into the polc list.
 
   \item If no polcs are found in the MEP table, the table is checked for a
     default polc. Note that default polcs have no domain (generally, they will
@@ -956,10 +1010,14 @@ virtual void setStateImpl (DataRecord &rec,bool initializing);
   \end{enumerate}
   
   Once the selection is complete, the parm will have at its disposal a list of
-  applicable polcs. If the parm is set to solvable, the list is then culled to
-  a single polc (NB: future versions may support solving for multiple polcs).
-  This polc is selected according to the following criteria (in descending
-  order of importance):
+  one or more polcs. 
+
+\subsubsection{Selecting a single solvable polc}
+  
+  If the parm is set to solvable, the polc list is then culled to a single polc
+  (NB: future versions may support solving for multiple polcs). This polc is
+  selected according to the following criteria (in descending order of
+  importance):
 
   \begin{itemize}
   
@@ -974,14 +1032,110 @@ virtual void setStateImpl (DataRecord &rec,bool initializing);
   Once a single solvable polc is selected, its domain is set equal to the
   requested domain.
   
-\subsubsection{Evaluating polcs}
+\subsubsection{Evaluating the polc list}
 
+  A single polc is evaluated directly over the \Cells\ of the incoming
+  \Request. The resulting \VellSet\ object (polc value, plus optional
+  derivatives) is then returned to the caller. 
+  
+  If the parm contains multiple polcs, different evaluation schemes are
+  possible:
+
+  \begin{description}
+
+  \item[Tiled polcs.] This is the only scheme implemented by \Parm\ at time of
+  writing. For every polc in the list, \Parm\ computes the overlap between
+  the polc's domain and the domain of the request. The polc is then evaluated
+  over that part of the \Cells\ grid which falls within the overlapping area.
+  This step is repeated for every polc. Sections of the grid with no polc
+  domain coverage are assigned a zero value.
+
+  Obviously, this scheme is most suitable when the polcs neatly tile
+  the request domain. Note that the result is generally discontinuous across
+  tile boundaries, which can be quite useful for representing things such as
+  phase jumps. On the other  hand, if the request domain is not completely
+  covered, or if the polc domains overlap, the results of this scheme are not
+  very well defined. 
+
+  \item[Weighted mean.] Each polc is associated with a set of weights, defined
+  on the \Cells\ grid. Different weighting schemes may be employed. Presumably,
+  grid points within the polc's domain are assigned a higher weight, while
+  points outside the domain get a lower weight, further decreasing as we get
+  further away from the domain. The value of the parm at each grid point is
+  then simply a weighted mean of all the polcs' values.
+
+  The advantage of this scheme is that it gracefully incorporates polcs with
+  overlapping domains, while allowing for extrapolation to non-covered areas of
+  the request domain. The result is always smooth and continous -- which, on the
+  other hand, may not always be what you want. The downside is computational
+  expense, as each polc needs to be evaluated at each grid point.
+
+  \item[Reduction to single polc.] This scheme involves fitting a single polc
+  (usually of a higher order) to multiple polcs. It can already be implemented
+  externally (see \qq{fitpolcs\_wlc.g} for an example), as a ``preprocessing''
+  stage of sorts. The scheme works by evaluating the polcs over some set of
+  points within the request domain (not necessarily the \Cells\ grid at all),
+  combining the results using some sort of weighted mean, then doing a
+  least-squares fit of a new polc to the resulting values.
+
+  \end{description}
+
+\subsubsection{Updating and saving polcs}    
+
+  In the course of a solution, the Solver node updates the values of solvable
+  polcs by sending up new values in the request rider. This is done by
+  including the \qq{set\_value} command in the rider. The value of the command
+  is expected to be a vector of new coefficients, in the same order in which
+  spids were assigned. More specifically:
+  
+  \begin{itemize}
+  
+  \item When a \Parm\ that has been set solvable initializes a new polc for a
+  domain, it associates a number of spids with its coefficients. Spids are
+  assigned as $256*${\em nodeindex}$+i$, where $i$ is the number of the
+  coefficient.
+  
+  \item These spids are included in the resulting \Vells; as results percolate
+  down the tree, spid vectors and corresponding perturbed values from different
+  solvable \Parm{}s are merged. The \Vells\ received by the solver contain the
+  full set of spids from all the solvable \Parm{}s in its trees.
+
+  \item The Solver computes a set of incremental updates. Note that the Solver
+  knows nothing of \Polc{}s or \Parm{}s; instead, it only deals with abstract
+  ``atomic parameters'' identified by spid.
+
+  \item 
+  
+  \end{itemize}
+  
   
 
-\subsubsection{}    
+  Presumably, at some point the new polc values need to be stored into a MEP
+  table. There are two ways to accomplish this:
+
+  \begin{description}
   
+  \item[Automatically:] if the \qq{auto\_save} flag is set in the \Parm\ state
+  record, then each update via \qq{set\_value} is immediately committed to the
+  MEP table.
+
+  \item[With explicit command:] whenever the \Parm\ receives a request with a
+  \qq{save\_polc=T} command in the rider, it commits all its polcs to the MEP
+  table.
+
+  \end{description}
   
-  
+  The \qq{dbid\_index} attribute of the \Polc\ is used to keep track of its
+  location in the MEP table. When a polc is loaded from the table (whether on
+  the C++ side, or via the Glish \qq{meptable()} object), \qq{dbid\_index} is
+  set to its DB identifier.\footnote{As long as we use AIPS++ tables, this is
+  simply the row number. If and when we employ other storage schemes, dbid 
+  may become something more complex.}  When a polc is subsequently saved, its
+  dbid is used to locate the correct entry in the table. New polcs are created
+  with a dbid of -1; when they are subsequently saved, a new entry is allocated
+  in the MEP table, and the polc object is updated with the dbid. During normal
+  operation, the user need not worry about this since everything happens
+  automatically; some advanced scripting may require knowledge of the dbid.
 
 \section{MeqServer interface}
 
